--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
+    "code-inspector-plugin": "^0.9.2",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
     "sass": "^1.63.6",
